--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  font-family: Arial, Helvetica, sans-serif;
-}
+
 
 @layer utilities {
   .text-balance {
@@ -81,3 +79,36 @@ body {
 filter: drop-shadow(2px 2px 10px black);
  
 }
+
+
+/* brack points */
+/* Extra small devices (phones, 320px and up) */
+@media (min-width: 320px and (max-width: 375px)) {
+  /* Styles for iPhone 5 */
+}
+
+/* Small devices (phones, 375px and up) */
+@media (min-width: 375px and (max-width: 425px)) {
+  /* Styles for iPhone 6 */
+}
+
+/* Medium devices (tablets, 768px and up) */
+@media (min-width: 768px and  (max-width: 1024px)) {
+  /* Styles for iPad */
+}
+
+/* Large devices (laptops, 1440px and up) */
+@media (min-width: 1440px and (max-width: 1680px)) {
+  /* Styles for Laptop */
+}
+
+/* Extra large devices (desktops, 1680px and up) */
+@media (min-width: 1680px and (max-width: 1920px)) {
+  /* Styles for Desktop */
+}
+
+/* Ultra large devices (large desktops, 1920px and up) */
+@media (min-width: 1920px and (max-width: 2560px)) {
+  /* Styles for large Desktop */
+}
+
