--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -94,6 +94,10 @@ filter: drop-shadow(2px 2px 10px black);
 
 /* Medium devices (tablets, 768px and up) */
 @media (min-width: 768px and  (max-width: 1024px)) {
+
+  .widthcastom{
+    width: 200px;
+  }
   /* Styles for iPad */
 }
 
